--- a/src/index.html
+++ b/src/index.html
@@ -9,13 +9,22 @@
   <div class="wrapper">
     <header class="header">
       <a class="header__logo" href="/"></a>
-      <button type="button" class="header__catalog-button">
-        <span class="catalog-button__burger"></span>
-        <span class="catalog-button__text">Каталог</span>
-      </button>
+      <div class="header__catalog-button">
+        <button type="button" class="catalog-button">
+          <span class="catalog-button__burger"></span>
+          <span class="catalog-button__text">Каталог</span>
+        </button>
+        <div class="header__catalog">
+          <ul class="catalog__list">
+            <li>Игровая приставка</li>
+            <li>Переферия для ПК</li>
+            <li>Игры и софт</li>
+          </ul>
+        </div>
+      </div>
       <div class="header__search">
         <div class="search-wrapper">
-          <input class="search-wrapper__input" type="text">
+          <input placeholder="Искать на Ozon-e" class="search-wrapper__input" type="text">
         </div>
         <button type="button" class="search-wrapper__button">
           <span class="button__search-img"></span>
@@ -31,16 +40,46 @@
   
   <div class="wrapper">
     <main class="main">
-      <div class="main__filter">
-        <div class="filter__title">
-          <h5>Фильтр</h5>
+      <div class="main__group">
+        <div class="main__filter">
+          <div class="filter-title">
+            <h3>Фильтр</h3>
+          </div>
+          <div class="filter-price">
+            <div class="filter-price__title">Цена</div>
+              <div class="filter-price__group-container">
+                <div class="filter-price__input-group">
+                  <label for="min" class="input-group__label">от</label>
+                  <input id="min" class="input-group__input">
+                </div>
+                <div class="filter-price__input-group">
+                  <label for="max" class="input-group__label">до</label>
+                  <input id="max" class="input-group__input">
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="filter-checkbox">
+            <label class="filter-checkbox__label">
+              <input type="checkbox" class="filter-checkbox__real"></input>
+              <span class="filter-checkbox__custom"></span>
+              <span class="filter-checkbox__text">Акция</span>
+            </label>
+          </div>
         </div>
-        <div class="filter__price"></div>
-        <div class="filter__check"></div>
-      </div>
       <div class="main__goods"></div>
     </main>
   </div>
-  
+  <div class="cart">
+    <div class="cart-body">
+      <div class="cart-body__title">Корзина</div>
+      <div class="cart-body__total">Общая сумма: <span>0</span> руб</div>
+      <div class="cart-body__empty">
+        <div class="empty__text">Ваша корзина пока пуста</div>
+      </div>
+      <button class="cart-body__button">Оформить заказ</button>
+      <div class="cart-body__cross">✖</div>
+    </div>
+  </div>
 </body>
 </html>
