added svg and css styles:cart-goods

--- a/src/index.html
+++ b/src/index.html
@@ -74,10 +74,65 @@
     <div class="cart-body">
       <div class="cart-body__title">Корзина</div>
       <div class="cart-body__total">Общая сумма: <span>0</span> руб</div>
-      <div class="cart-body__empty">
-        <div class="empty__text">Ваша корзина пока пуста</div>
+      <div class="cart-body__goods">
+        <div class="goods__empty-text">Ваша корзина пока пуста</div>
+        <div class="goods__wrapper">
+          <div class="goods__chekbox">
+            <label class="goods-chekbox__label">
+              <input type="checkbox" class="goods-chekbox__real">
+              <span class="goods-chekbox__custom"></span>
+            </label>
+          </div>
+          <div class="goods__container-description">
+            <div class="goods__image">
+              <div class="goods__image-contain"></div>
+            </div>
+            <div class="goods__group-description">
+              <a class="goods__anchor-description">
+                <div class="goods__name">
+                  <p>Наколенники для гимнастикиllllllllllllllllllllllllllllll, волейбола, танцевlllllllllllllllll, спортивная защиkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjтаlllllllllllllllllllllllllllll на колени M
+                  </p>
+                </div>
+                <div class="goods__name-color">
+                  цвет черный, чeрный
+                </div>
+              </a>
+              <div class="goods__mark-group">
+                <button class="mark-group__favorites">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="01">
+                    <path fill="currentColor" d="M16 5.522C16 2.957 14.052 1 11.5 1c-1.432 0-2.665.799-3.5 1.926C7.165 1.799 5.932 1 4.5 1 1.948 1 0 2.957 0 5.522c0 2.457 1.66 4.415 3.241 5.743 1.617 1.358 3.387 2.258 4.062 2.577.444.21.95.21 1.394 0 .675-.32 2.445-1.219 4.062-2.577C14.339 9.937 16 7.979 16 5.522Z">
+                    </path>
+                  </svg>
+                </button>
+                <button class="mark-group__delete">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="ag018-a2">
+                    <path fill="currentColor" d="m4.888 3.035.275-.826A2.5 2.5 0 0 1 7.535.5h.93a2.5 2.5 0 0 1 2.372 1.71l.275.825c2.267.09 3.555.406 3.555 1.527 0 .938-.417.938-1.25.938H2.583c-.833 0-1.25 0-1.25-.938 0-1.12 1.288-1.437 3.555-1.527Zm1.856-.299-.088.266C7.082 3 7.53 3 8 3c.47 0 .918 0 1.345.002l-.089-.266a.833.833 0 0 0-.79-.57h-.931a.833.833 0 0 0-.79.57ZM2.167 7.167c0-.6.416-.834.833-.834h10c.417 0 .833.235.833.834 0 6.666-.416 8.333-5.833 8.333s-5.833-1.667-5.833-8.333Zm4.166 1.666a.833.833 0 0 0-.833.834v1.666a.833.833 0 1 0 1.667 0V9.667a.833.833 0 0 0-.834-.834Zm4.167.834a.833.833 0 1 0-1.667 0v1.666a.833.833 0 1 0 1.667 0V9.667Z">
+                    </path>
+                  </svg>
+                </button>
+              </div>
+            </div>
+            <div class="goods__price">
+              <div class="goods__price-normal">1234 ₽</div>
+              <div class="goods__price-sale">🔥Hot Sale🔥</div>
+            </div>
+          </div>
+          <div class="goods__count-wrapp">
+            <button class="count-wrapp__minus">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" class="a2429-e9"><path fill="currentColor" d="M5 11a1 1 0 1 0 0 2h14a1 1 0 1 0 0-2H5Z"></path>
+              </svg>
+            </button>
+            <input type="number" class="count-wrapp__numeric">
+            <button class="count-wrapp__plus">
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" class="a2429-e9"><path fill="currentColor" d="M12 4a1 1 0 0 0-1 1v6H5a1 1 0 1 0 0 2h6v6a1 1 0 1 0 2 0v-6h6a1 1 0 1 0 0-2h-6V5a1 1 0 0 0-1-1Z"></path>
+              </svg>
+            </button>
+          </div>
+        </div>
       </div>
-      <button class="cart-body__button">Оформить заказ</button>
+      <button class="cart-body__button">
+        Оформить заказ
+      </button>
       <div class="cart-body__cross">✖</div>
     </div>
   </div>
