--- a/src/index.html
+++ b/src/index.html
@@ -67,37 +67,41 @@
             </label>
           </div>
         </div>
-      <div class="main__goods"></div>
+
+      <div class="main__goods">
+      </div>
+      
     </main>
+
   </div>
   <div class="cart">
     <div class="cart-body">
       <div class="cart-body__title">Корзина</div>
       <div class="cart-body__total">Общая сумма: <span>0</span> руб</div>
       <div class="cart-body__goods">
-        <div class="goods__empty-text">Ваша корзина пока пуста</div>
-        <div class="goods__wrapper">
-          <div class="goods__chekbox">
+        <div class="cart-goods__empty-text">Ваша корзина пока пуста</div>
+        <div class="cart-goods__wrapper">
+          <div class="cart-goods__chekbox">
             <label class="goods-chekbox__label">
               <input type="checkbox" class="goods-chekbox__real">
               <span class="goods-chekbox__custom"></span>
             </label>
           </div>
-          <div class="goods__container-description">
-            <div class="goods__image">
-              <div class="goods__image-contain"></div>
+          <div class="cart-goods__container-description">
+            <div class="cart-goods__image">
+              <div class="cart-goods__image-contain"></div>
             </div>
-            <div class="goods__group-description">
-              <a class="goods__anchor-description">
-                <div class="goods__name">
+            <div class="cart-goods__group-description">
+              <a class="cart-goods__anchor-description">
+                <div class="cart-goods__name">
                   <p>Наколенники для гимнастикиllllllllllllllllllllllllllllll, волейбола, танцевlllllllllllllllll, спортивная защиkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkkjjjjjjjjjjjjjjjjjjjjjjjjjjjjjjтаlllllllllllllllllllllllllllll на колени M
                   </p>
                 </div>
-                <div class="goods__name-color">
+                <div class="cart-goods__name-color">
                   цвет черный, чeрный
                 </div>
               </a>
-              <div class="goods__mark-group">
+              <div class="cart-goods__mark-group">
                 <button class="mark-group__favorites">
                   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" class="01">
                     <path fill="currentColor" d="M16 5.522C16 2.957 14.052 1 11.5 1c-1.432 0-2.665.799-3.5 1.926C7.165 1.799 5.932 1 4.5 1 1.948 1 0 2.957 0 5.522c0 2.457 1.66 4.415 3.241 5.743 1.617 1.358 3.387 2.258 4.062 2.577.444.21.95.21 1.394 0 .675-.32 2.445-1.219 4.062-2.577C14.339 9.937 16 7.979 16 5.522Z">
@@ -112,12 +116,12 @@
                 </button>
               </div>
             </div>
-            <div class="goods__price">
-              <div class="goods__price-normal">1234 ₽</div>
-              <div class="goods__price-sale">🔥Hot Sale🔥</div>
+            <div class="cart-goods__price">
+              <div class="cart-goods__price-normal">1234 ₽</div>
+              <div class="cart-goods__price-sale">🔥Hot Sale🔥</div>
             </div>
           </div>
-          <div class="goods__count-wrapp">
+          <div class="cart-goods__count-wrapp">
             <button class="count-wrapp__minus">
               <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" class="a2429-e9"><path fill="currentColor" d="M5 11a1 1 0 1 0 0 2h14a1 1 0 1 0 0-2H5Z"></path>
               </svg>
