added CategoryMenu and fix catalog

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
         <div class="header__catalog">
           <ul class="catalog__list">
             <li>Игровая приставка</li>
-            <li>Переферия для ПК</li>
+            <li>Периферия для ПК</li>
             <li>Игры и софт</li>
           </ul>
         </div>
